# WiseAssBot

./: .env.example  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  config-example.toml  wrangler.toml
.github/workflows/: ci.yaml  deploy.yaml  precheck.yaml  test.yaml
src/: bot.rs  challenge.rs  commands.rs  config.rs  lib.rs  telegram.rs
src/response/: ask  easter-egg  free  help  join  link  report
