[package]
name = "wiseass"
version = "0.1.0"
edition = "2021"
authors = [ "Amir Mohammadi <amiremohamadi@yahoo.com>" ]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version="0.3.3", features = ["queue"] }
worker-macros = { version="0.3.3" }
console_error_panic_hook = { version = "0.1.1" }
telegram_types = { git = "https://github.com/birlug/telegram-types" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
include_dir = "0.7"
cidr = { version = "0.2", features = ["serde"] }
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
rust-persian-tools = "1.0"
